lustre/osp/osp_dev.c
@@ -352,11 +352,11 @@ static int osp_shutdown(const struct lu_env *env, struct osp_device *d)
 	rc = osp_disconnect(d);
 
 	if (!d->opd_connect_mdt) {
-		/* stop precreate thread */
-		osp_precreate_fini(d);
-
 		/* stop sync thread */
 		osp_sync_fini(d);
+
+		/* stop precreate thread */
+		osp_precreate_fini(d);
 
 		/* release last_used file */
 		osp_last_used_fini(env, d);
